# graphy

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh  uninstall.ps1  uninstall.sh
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
bench/: compare.sh  comparison.md
claude-plugin/: README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: graphy-explorer.md
claude-plugin/commands/: graphy-neighbors.md  graphy-path.md  graphy-report.md  graphy-search.md  graphy-stats.md  graphy.md  setup-graphy.md
claude-plugin/hooks/: _common.sh  maybe-build.sh  rebuild-async.sh  session-start.sh
claude-plugin/skills/graphy/: SKILL.md
codex-plugin/: .mcp.json  README.md
codex-plugin/.codex-plugin/: plugin.json
codex-plugin/hooks/: hooks.json  rebuild-async.sh  session-start.sh
codex-plugin/skills/graphy/: SKILL.md
crates/graphy-cli/: Cargo.toml
crates/graphy-cli/src/: gitignore.rs  main.rs
crates/graphy-cli/tests/: cli.rs  serve_e2e.rs
crates/graphy-core/: Cargo.toml
crates/graphy-core/examples/: dump_tree.rs
crates/graphy-core/src/: analyze.rs  build.rs  cache.rs  cluster.rs  dedup.rs  detect.rs  export.rs  graph.rs  incremental.rs  lib.rs  loader.rs  manifest.rs  pipeline.rs  report.rs  scc.rs  schema.rs  security.rs  serve.rs  validate.rs  watch.rs
crates/graphy-core/src/cluster/: levels.rs  mod.rs
crates/graphy-core/src/dedup/: map.rs  mod.rs
crates/graphy-core/src/extract/: bash.rs  c_family.rs  common.rs  csharp.rs  css.rs  dart.rs  elixir.rs  erlang.rs  fortran.rs  go.rs  groovy.rs  haskell.rs  html.rs  java.rs  js_ts.rs  json.rs  julia.rs  kotlin.rs  lua.rs  markdown.rs  mod.rs  objc.rs  ocaml.rs  pascal.rs  perl.rs  php.rs  powershell.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  sql.rs  svelte.rs  swift.rs  toml.rs  verilog.rs  yaml.rs  zig.rs
crates/graphy-core/src/watch/: tests.rs
crates/graphy-core/tests/: analyze.rs  build.rs  cache.rs  cluster.rs  coverage.rs  coverage_fill.rs  cycle_aware_incremental.rs  dedup.rs  detect.rs  export.rs  extract_go.rs  extract_js_ts.rs  extract_lang_pack2.rs  extract_lang_pack3.rs  extract_more.rs  extract_python.rs  extract_rust.rs  graph.rs  imports_expansion.rs  incremental.rs  lang_bash.rs  lang_c.rs  lang_coverage_smoke.rs  lang_cpp.rs  lang_csharp.rs  lang_css.rs  lang_dart.rs  lang_elixir.rs  lang_erlang.rs  lang_fortran.rs  lang_go.rs  lang_groovy.rs  lang_haskell.rs  lang_html.rs  lang_java.rs  lang_javascript.rs  lang_json.rs  lang_julia.rs  lang_kotlin.rs  lang_lua.rs  (+31 more)
crates/graphy-core/tests/lang_coverage/: common.rs
crates/graphy-plugin-api/: Cargo.toml
crates/graphy-plugin-api/src/: helpers.rs  lib.rs
crates/graphy-plugin-bash/: Cargo.toml
crates/graphy-plugin-bash/src/: lib.rs
crates/graphy-plugin-c-family/src/: lib.rs
crates/graphy-plugin-csharp/src/: lib.rs
crates/graphy-plugin-css/: Cargo.toml
crates/graphy-plugin-css/src/: lib.rs
crates/graphy-plugin-dart/src/: lib.rs
crates/graphy-plugin-elixir/: Cargo.toml
crates/graphy-plugin-elixir/src/: lib.rs
crates/graphy-plugin-erlang/src/: lib.rs
crates/graphy-plugin-fortran/src/: lib.rs
crates/graphy-plugin-go/src/: lib.rs
crates/graphy-plugin-groovy/: Cargo.toml
crates/graphy-plugin-groovy/src/: lib.rs
crates/graphy-plugin-haskell/: Cargo.toml
crates/graphy-plugin-haskell/src/: lib.rs
crates/graphy-plugin-html/src/: lib.rs
crates/graphy-plugin-java/: Cargo.toml
crates/graphy-plugin-java/src/: lib.rs
crates/graphy-plugin-kotlin/: Cargo.toml
crates/graphy-plugin-kotlin/src/: lib.rs
crates/graphy-plugin-markdown/: Cargo.toml
crates/graphy-plugin-objc/: Cargo.toml
crates/graphy-plugin-objc/src/: lib.rs
crates/graphy-plugin-ocaml/: Cargo.toml
crates/graphy-plugin-ocaml/src/: lib.rs
crates/graphy-plugin-perl/: Cargo.toml
crates/graphy-plugin-php/: Cargo.toml
crates/graphy-plugin-php/src/: lib.rs
crates/graphy-plugin-python/: Cargo.toml
crates/graphy-plugin-svelte/: Cargo.toml
crates/graphy-plugin-svelte/src/: lib.rs
crates/graphy-plugin-toml/: Cargo.toml
crates/plugins/graphy-plugin-c-family/: Cargo.toml
crates/plugins/graphy-plugin-c-family/src/: lib.rs
crates/plugins/graphy-plugin-csharp/: Cargo.toml
crates/plugins/graphy-plugin-csharp/src/: lib.rs
crates/plugins/graphy-plugin-dart/: Cargo.toml
crates/plugins/graphy-plugin-erlang/: Cargo.toml
crates/plugins/graphy-plugin-erlang/src/: lib.rs
crates/plugins/graphy-plugin-fortran/: Cargo.toml
crates/plugins/graphy-plugin-fortran/src/: lib.rs
crates/plugins/graphy-plugin-go/: Cargo.toml
crates/plugins/graphy-plugin-go/src/: lib.rs
crates/plugins/graphy-plugin-html/: Cargo.toml
crates/plugins/graphy-plugin-html/src/: lib.rs
crates/plugins/graphy-plugin-js-ts/: Cargo.toml
crates/plugins/graphy-plugin-js-ts/src/: lib.rs
crates/plugins/graphy-plugin-json/: Cargo.toml
crates/plugins/graphy-plugin-julia/: Cargo.toml
crates/plugins/graphy-plugin-powershell/: Cargo.toml
crates/plugins/graphy-plugin-powershell/src/: lib.rs
crates/plugins/graphy-plugin-ruby/: Cargo.toml
crates/plugins/graphy-plugin-ruby/src/: lib.rs
crates/plugins/graphy-plugin-sql/: Cargo.toml
crates/plugins/graphy-plugin-sql/src/: lib.rs
crates/plugins/graphy-plugin-verilog/: Cargo.toml
crates/plugins/graphy-plugin-verilog/src/: lib.rs
crates/plugins/graphy-plugin-yaml/: Cargo.toml
crates/plugins/graphy-plugin-yaml/src/: lib.rs
docs/: README.md  analysis.md  architecture.md  benchmarks.md  caching.md  install.md  language-coverage.md  modes.md  plugins.md  release-flow.md  testing.md  type-layer-coverage.md
docs/specs/: 2026-06-03-typed-signature-layer-design.md
fixtures/: .gitignore  README.md  gen-large-synthetic.sh  gen-medium.sh
fixtures/go-mini-service/: go.mod  main.go
fixtures/lang-coverage/toml/: Cargo.toml  README.md  config.toml
fixtures/rust-mini-webserver/: Cargo.toml
integrations/: README.md  claude-code.md  codex.md  copilot-cli.md  cursor.md
tools/: package-release.sh
(+268 files in other folders)
