[package]
name = "graphy-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "graphy CLI: build a knowledge graph from any folder of source."

[[bin]]
name = "graphy"
path = "src/main.rs"

[dependencies]
graphy-core.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
