[package]
name = "graphy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core pipeline for graphy: detect → extract → build → cluster → analyze → report → export."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rayon.workspace = true
walkdir.workspace = true
ignore.workspace = true
petgraph.workspace = true
indexmap.workspace = true
ahash.workspace = true
once_cell.workspace = true
regex.workspace = true

tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-json.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-php.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-zig.workspace = true
tree-sitter-elixir.workspace = true
tree-sitter-objc.workspace = true
tree-sitter-julia.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
tree-sitter-groovy.workspace = true
tree-sitter-powershell.workspace = true
tree-sitter-verilog.workspace = true
tree-sitter-fortran.workspace = true
tree-sitter-sequel.workspace = true
tree-sitter-r.workspace = true
tree-sitter-dart.workspace = true
tree-sitter-vue.workspace = true
tree-sitter-svelte-ng.workspace = true
tree-sitter-md.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-pascal.workspace = true
tree-sitter-perl.workspace = true
tree-sitter-haskell.workspace = true
tree-sitter-ocaml.workspace = true
tree-sitter-erlang.workspace = true
tree-sitter-toml-ng.workspace = true

blake3.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
libloading.workspace = true
dirs.workspace = true
graphy-plugin-api.workspace = true
sha2.workspace = true
toml.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json = "1"
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
