[package]
name = "graphy-plugin-haskell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "graphy language plugin: Haskell extractor (cdylib)."

[lib]
crate-type = ["cdylib"]

[dependencies]
graphy-plugin-api.workspace = true
tree-sitter.workspace = true
tree-sitter-haskell = { workspace = true }
serde.workspace = true
serde_json.workspace = true
