[package]
name = "graphy-plugin-c-family"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "graphy language plugin: C and C++ extractor (cdylib)."

[lib]
crate-type = ["cdylib"]

[dependencies]
graphy-plugin-api.workspace = true
tree-sitter.workspace = true
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
serde.workspace = true
serde_json.workspace = true
