[package]
name = "graphy-plugin-verilog"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "graphy language plugin: Verilog/SystemVerilog extractor (cdylib)."

[lib]
crate-type = ["cdylib"]

[dependencies]
graphy-plugin-api.workspace = true
tree-sitter.workspace = true
tree-sitter-verilog = { workspace = true }
serde.workspace = true
serde_json.workspace = true
