[package]
name = "graphy-toml-fixture"
version = "0.1.0"
edition = "2021"
description = "TOML fixture for lang-coverage Tier 4"
authors = ["Graphy Team"]

[package.metadata]
homepage = "https://example.com"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "graphy"
path = "src/main.rs"

[[bin]]
name = "graphy-cli"
path = "src/cli.rs"
